--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
+    "firebase": "^11.8.1",
     "json-server": "^1.0.0-beta.3",
     "lucide": "^0.511.0",
     "lucide-react": "^0.511.0",
